@@ -1,4 +1,3 @@
-- complete the hosts stuff
 - save the gateway stuff
 - complete the locations stuff
 - add modem devices
